--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-/.next/
-/node_modules/
-/.idea/
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
+.idea/*
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
