--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@
 set -g prefix C-a # Set mode key to Control+a
 bind C-a send-prefix
 set -g mouse on
+set-option -g set-clipboard on
 
 #
 # Plugins
@@ -21,6 +22,27 @@ set -g @tpm_plugins 'tmux-plugins/tmux-yank' # for copying to system clipboard
 set -g @tpm_plugins 'tmux-plugins/tmux-prefix-highlight' # highlights when you press tmux prefix key
 set -g @tpm_plugins 'tmux-plugins/tmux-pain-control' # for controlling panes
 
+# https://github.com/tmux-plugins/tmux-sessionist#features
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+# brew install urlview
+# brew install extract_url
+set @plugin 'tmux-plugins/tmux-urlview'
+
+# fastcopy
+set -g @plugin 'abhinav/tmux-fastcopy'
+set-option -g @fastcopy-alphabet asdfghjkl
+set-option -g @fastcopy-action pbcopy  # for macOS
+set-option -g @fastcopy-key f
+
+# tmux-menus
+set -g @plugin 'jaclu/tmux-menus'
+set -g @menus_location_x 'C'
+set -g @menus_location_y 'C'
+
 #
 # Theme
 #
@@ -30,6 +52,22 @@ set -g @tpm_plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# Fig Tmux Integration: Enabled
-# source-file ~/.fig/tmux
-# End of Fig Tmux Integration
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
