--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -1,5 +1,4 @@
-# ===================================================================
-# This file contains the default startup commands for ranger.
+This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
 # (system-wide) or ~/.config/ranger/rc.conf (per user) and add your custom
 # commands there.
@@ -34,7 +33,7 @@ set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden false
+set show_hidden true
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
@@ -71,7 +70,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -114,7 +113,7 @@ set preview_images false
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method w3m
+set preview_images_method iterm2
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -280,17 +279,17 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers false
+set line_numbers relative
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
-set relative_current_zero false
+set relative_current_zero true
 
 # Start line numbers from 1 instead of 0
 set one_indexed false
 
 # Save tabs on exit
-set save_tabs_on_exit false
+set save_tabs_on_exit true
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
@@ -757,4 +756,4 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-default_linemode devicons
+default_linemode devicons2
