--- a/.ideavimrc
+++ b/.ideavimrc
@@ -7,7 +7,7 @@
 set ignorecase
 set smartcase
 set scrolloff=2 " 3 lines above/below cursor when scrolling
-set relativenumber number
+" set relativenumber number
 
 " Copy to system clipboard as well
 set clipboard+=unnamed
