--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,9 +101,9 @@ set -g @tpm_plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
 #
 
 # Use Ctrl-j as the prefix instead of default Ctrl-b
-set-option -g prefix C-j
+set-option -g prefix C-a
 unbind-key C-b
-bind-key C-j send-prefix
+bind-key C-a send-prefix
 
 # Ctrl-j r to reload this config
 unbind r
