--- a/.tmux.conf
+++ b/.tmux.conf
@@ -134,7 +134,7 @@ bind-key -n C-M-l send-keys right
 # Settings
 #
 
-set-option -g default-shell /opt/homebrew/bin/fish 
+set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
