--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,22 +1,23 @@
+
 " Plugins ----------------------------------------------------------
 Plug 'preservim/nerdtree'
 
 "-------------------------------------------------------------------
-set nu 
+" set nu 
+set relativenumber
 set ignorecase
 set smartcase
 set scrolloff=2
 set clipboard+=unnamed
-set multiple-cursors
+" set multiple-cursors
 set easymotion
-set commentary
+" set commentary
 set highlightedyank
-set surround
+" set surround
 set sneak
 set ideajoin
 set visualbell
 set noerrorbells
-set relativenumber
 
 " My favorites -----------------------------------------------------
 imap jj <Esc>
@@ -106,6 +107,8 @@ vnoremap c "_c
 
 nnoremap x "_x
 vnoremap x "_x
+nnoremap X "_X
+vnoremap X "_X
 
 " Cut (like c, cc and C) --------------------------------------------
 nnoremap m "+c
@@ -146,4 +149,3 @@ nmap zj o<Esc>
 nmap zk O<Esc>
 nmap zJ o<Esc>k
 nmap zJ O<Esc>j
-
