--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @scroll-speed-num-lines-per-scroll "1"
 
 ### https://github.com/tmux-plugins/tmux-continuum
-
 #
 # - continuous saving of tmux environment
 # - automatic tmux start when computer/server is turned on
@@ -96,6 +95,12 @@ set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
+
+# Yazi stuff
+set -g allow-passthrough on
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # NeoVim stuff
 set-option -sg escape-time 10
