--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
 .idea/*
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-jsconfig.json
+.DS_Store
