--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,15 +3,15 @@
 Plug 'preservim/nerdtree'
 
 "-------------------------------------------------------------------
-" set nu 
-set relativenumber
+set nu 
+" set relativenumber
 set ignorecase
 set smartcase
 set scrolloff=2
 set clipboard+=unnamed
 " set multiple-cursors
 set easymotion
-" set commentary
+set commentary
 set highlightedyank
 " set surround
 set sneak
