--- a/.ideavimrc
+++ b/.ideavimrc
@@ -21,6 +21,9 @@ set noerrorbells
 
 " My favorites -----------------------------------------------------
 imap jj <Esc>
+imap jk <Esc>
+imap kj <Esc>
+
 map <C-c> <Esc>
 
 "--------------------------------------------------------------------
