--- a/RectangleConfig.json
+++ b/RectangleConfig.json
@@ -65,7 +65,7 @@
       "int" : 1
     },
     "footprintAlpha" : {
-      "float" : 0.30000001192092896
+      "float" : 0.3
     },
     "footprintAnimationDurationMultiplier" : {
       "float" : 0
@@ -224,43 +224,47 @@
   "shortcuts" : {
     "bottomHalf" : {
       "keyCode" : 125,
-      "modifierFlags" : 786432
+      "modifierFlags" : 1441792
     },
     "center" : {
       "keyCode" : 8,
       "modifierFlags" : 786432
     },
-    "centerThird" : {
-      "keyCode" : 3,
-      "modifierFlags" : 786432
-    },
     "firstThird" : {
-      "keyCode" : 2,
-      "modifierFlags" : 786432
+      "keyCode" : 16,
+      "modifierFlags" : 1966080
     },
     "firstTwoThirds" : {
-      "keyCode" : 14,
-      "modifierFlags" : 786432
+      "keyCode" : 32,
+      "modifierFlags" : 1966080
     },
     "larger" : {
       "keyCode" : 24,
       "modifierFlags" : 786432
     },
     "lastThird" : {
-      "keyCode" : 5,
-      "modifierFlags" : 786432
+      "keyCode" : 31,
+      "modifierFlags" : 1966080
     },
     "lastTwoThirds" : {
-      "keyCode" : 17,
-      "modifierFlags" : 786432
+      "keyCode" : 34,
+      "modifierFlags" : 1966080
     },
     "leftHalf" : {
       "keyCode" : 123,
-      "modifierFlags" : 786432
+      "modifierFlags" : 1441792
     },
     "maximize" : {
+      "keyCode" : 46,
+      "modifierFlags" : 1966080
+    },
+    "nextDisplay" : {
+      "keyCode" : 117,
+      "modifierFlags" : 1966080
+    },
+    "previousDisplay" : {
       "keyCode" : 36,
-      "modifierFlags" : 786432
+      "modifierFlags" : 1966080
     },
     "reflowTodo" : {
       "keyCode" : 45,
@@ -272,7 +276,7 @@
     },
     "rightHalf" : {
       "keyCode" : 124,
-      "modifierFlags" : 786432
+      "modifierFlags" : 1441792
     },
     "smaller" : {
       "keyCode" : 27,
@@ -284,7 +288,7 @@
     },
     "topHalf" : {
       "keyCode" : 126,
-      "modifierFlags" : 786432
+      "modifierFlags" : 1441792
     }
   },
   "version" : "81"
