--- a/RectangleConfig.json
+++ b/RectangleConfig.json
@@ -222,16 +222,20 @@
     }
   },
   "shortcuts" : {
+    "almostMaximize" : {
+      "keyCode" : 15,
+      "modifierFlags" : 1966080
+    },
     "bottomHalf" : {
-      "keyCode" : 125,
-      "modifierFlags" : 1441792
+      "keyCode" : 38,
+      "modifierFlags" : 1966080
     },
     "center" : {
       "keyCode" : 8,
       "modifierFlags" : 1966080
     },
     "centerHalf" : {
-      "keyCode" : 35,
+      "keyCode" : 3,
       "modifierFlags" : 1966080
     },
     "firstThird" : {
@@ -243,7 +247,7 @@
       "modifierFlags" : 1966080
     },
     "larger" : {
-      "keyCode" : 24,
+      "keyCode" : 5,
       "modifierFlags" : 1966080
     },
     "lastThird" : {
@@ -255,23 +259,19 @@
       "modifierFlags" : 1966080
     },
     "leftHalf" : {
-      "keyCode" : 123,
-      "modifierFlags" : 1441792
+      "keyCode" : 4,
+      "modifierFlags" : 1966080
     },
     "maximize" : {
       "keyCode" : 46,
       "modifierFlags" : 1966080
     },
     "maximizeHeight" : {
-      "keyCode" : 41,
+      "keyCode" : 17,
       "modifierFlags" : 1966080
     },
     "nextDisplay" : {
-      "keyCode" : 117,
-      "modifierFlags" : 1966080
-    },
-    "previousDisplay" : {
-      "keyCode" : 36,
+      "keyCode" : 45,
       "modifierFlags" : 1966080
     },
     "reflowTodo" : {
@@ -283,11 +283,11 @@
       "modifierFlags" : 1966080
     },
     "rightHalf" : {
-      "keyCode" : 124,
-      "modifierFlags" : 1441792
+      "keyCode" : 37,
+      "modifierFlags" : 1966080
     },
     "smaller" : {
-      "keyCode" : 27,
+      "keyCode" : 11,
       "modifierFlags" : 1966080
     },
     "toggleTodo" : {
@@ -295,8 +295,8 @@
       "modifierFlags" : 786432
     },
     "topHalf" : {
-      "keyCode" : 126,
-      "modifierFlags" : 1441792
+      "keyCode" : 40,
+      "modifierFlags" : 1966080
     }
   },
   "version" : "81"
