--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,8 @@ set -g @scroll-speed-num-lines-per-scroll "1"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'iterm'
+set -g @continuum-boot-options 'kitty'
+# set -g @continuum-boot-options 'iterm'
 
 ### https://github.com/tmux-plugins/tmux-resurrect
 #
