--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,8 +3,8 @@
 set NERDTree
 
 "-------------------------------------------------------------------
-set nu 
-" set relativenumber
+"set nu 
+set relativenumber
 set ignorecase
 set smartcase
 set scrolloff=2
