--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,7 +83,7 @@ bind -n S-Right next-window
 # Settings
 #
 
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /opt/homebrew/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
