--- a/rexuiz/config.cfg
+++ b/rexuiz/config.cfg
@@ -106,8 +106,9 @@ seta "cl_announcer_print" "0"
 "cl_backspeed" "600"
 "cl_bobmodel" "0"
 seta "cl_brightskins" "1"
-seta "cl_casings_maxcount" "50"
-seta "cl_cts_position_helper" "0"
+seta "cl_casings" "0"
+seta "cl_casings_maxcount" "0"
+seta "cl_cts_position_helper" "1"
 seta "cl_cts_position_helper_alpha" "0.500000"
 seta "cl_cts_position_helper_color" "0.500000 0.500000 0.500000"
 seta "cl_cts_showacceleration" "1"
@@ -124,17 +125,19 @@ seta "cl_cts_strafe_helper_velocity_direction" "0"
 seta "cl_damage_screen_effects" "0"
 seta "cl_damageindicator" "1.500000"
 seta "cl_damageindicator_alpha" "1"
+"cl_decals" "0"
 "cl_decals_max" "256"
 "cl_decals_time" "4"
+seta "cl_defragcpm_class" "1"
 seta "cl_font_iceland" "1"
 "cl_forwardspeed" "600"
 seta "cl_gentle" "1"
-seta "cl_gibs_maxcount" "50"
+seta "cl_gibs_maxcount" "0"
 seta "cl_gunalpha" "0.500000"
 seta "cl_hints_skip" "0"
 "cl_movement" "1"
 seta "cl_nex_secondary_zoom_disable" "0"
-seta "cl_nogibs" "0.5"
+seta "cl_nogibs" "1"
 seta "cl_nopogostick" "0"
 "cl_particles_quality" "0.75"
 seta "cl_particles_rain_distance" "300"
@@ -190,22 +193,29 @@ seta "crosshair_zapper_color_red" "0"
 seta "crosshair_zapper_size" "1"
 "fov" "105"
 seta "g_campaign_name" "rexclassic"
-seta "g_maplist" "bleach strength "
+seta "g_maplist" "strength"
 seta "g_waypointsprite_alpha" "0.500000"
 "gl_texture_anisotropy" "16"
 "hostname" "Player's Rexuiz server"
 "mastervolume" "0.100000"
 seta "menu_campaign_skill" "0"
 seta "menu_maxplayers" "10"
+seta "menu_mouse_speed" "0.400000"
+seta "menu_public" "1"
 "net_slist_extra" " 108.61.164.188:26004 91.208.52.13:26030 91.208.52.13:26006 212.8.251.9:26016 212.8.251.219:26005 46.232.251.31:26000 66.45.244.2:26000 94.232.184.164:26000 144.76.28.11:26002 144.76.28.11:26000 144.76.28.11:26001 97.99.232.125:26003 178.79.160.71:26000 212.8.251.9:26007 212.8.251.219:26010 212.8.251.219:26001 212.8.251.219:26008 212.8.251.219:26002 212.8.251.219:26003 91.208.52.13:26015 195.90.208.198:26003 213.141.136.246:26007 82.66.47.63:26000 213.141.136.246:26001 147.135.209.122:26000 213.141.136.246:26005 139.28.235.239:26000 213.141.136.246:26006 213.141.136.246:26000 212.8.251.219:26004 192.248.187.110:26002 188.195.248.129:26001 66.175.235.209:26000 176.102.66.245:26000 188.195.248.129:26002 213.141.136.246:26004 185.18.60.132:15684 188.195.248.129:26000"
 "net_slist_favorites" "95.217.82.122"
 "prvm_language" "en"
+"r_celoutlines" "1"
+"r_celshading" "1"
 "r_drawdecals_drawdistance" "500"
 "r_drawparticles_drawdistance" "2000"
 "r_framedatasize" "4"
 "r_glsl_offsetmapping" "1"
+"r_glsl_offsetmapping_reliefmapping" "1"
+"r_shadow_gloss" "0"
 "r_shadow_realtime_dlight" "0"
 "r_shadow_realtime_dlight_shadows" "1"
+"r_shadow_realtime_world_shadows" "1"
 "r_subdivisions_tolerance" "1"
 seta "rm_anonspec" "0"
 seta "rm_crosshealth" "0"
@@ -233,6 +243,7 @@ seta "sbar_gameinfo_scale" "1"
 seta "sbar_health_background" "1"
 seta "sbar_health_position" "-140 5 9"
 seta "sbar_health_scale" "1"
+seta "sbar_increment_maptime" "1"
 seta "sbar_nadget2_background" "0"
 seta "sbar_nadget2_position" "74 9 8"
 seta "sbar_nadget2_scale" "1"
@@ -254,9 +265,10 @@ seta "sbar_weapons_order" "0"
 seta "sbar_weapons_position" "0 100 10"
 seta "sbar_weapons_scale" "1"
 seta "sbar_weapons_show_ammo" "1"
+"sensitivity" "2"
 "showtime" "1"
 "skill" "0"
-"sv_curl_serverpackages" " rexdlc_player-rexus.serverpackage"
+"sv_curl_serverpackages" " rexdlc_rm_skins.serverpackage rexdlc_rm_effects_v2.serverpackage rexdlc_player-rexus.serverpackage rexdlc_powerups.serverpackage"
 "sys_first_run" "0"
 "v_brightness" "0.160000"
 "v_contrast" "1.100000"
