--- a/rexuiz/config.cfg
+++ b/rexuiz/config.cfg
@@ -268,7 +268,7 @@ seta "sbar_weapons_show_ammo" "1"
 "sensitivity" "2"
 "showtime" "1"
 "skill" "0"
-"sv_curl_serverpackages" " rexdlc_rm_skins.serverpackage rexdlc_rm_effects_v2.serverpackage rexdlc_player-rexus.serverpackage rexdlc_powerups.serverpackage"
+"sv_curl_serverpackages" " rexdlc_player-rexus.serverpackage"
 "sys_first_run" "0"
 "v_brightness" "0.160000"
 "v_contrast" "1.100000"
