--- a/rexuiz/config.cfg
+++ b/rexuiz/config.cfg
@@ -103,6 +103,7 @@ seta "_slot_description11" "e1m5 - 2022 Apr 23 21:12:00 "
 "bgmvolume" "0"
 seta "chase_angle" "0"
 seta "cl_announcer_print" "0"
+"cl_backspeed" "600"
 "cl_bobmodel" "0"
 seta "cl_brightskins" "1"
 seta "cl_casings" "0"
@@ -129,6 +130,7 @@ seta "cl_damageindicator_alpha" "1"
 "cl_decals_time" "4"
 seta "cl_defragcpm_class" "1"
 seta "cl_font_iceland" "1"
+"cl_forwardspeed" "600"
 seta "cl_gentle" "1"
 seta "cl_gibs_maxcount" "0"
 seta "cl_gunalpha" "0.500000"
@@ -151,8 +153,9 @@ seta "cl_shownames" "0"
 seta "cl_shownames_cos" "0"
 seta "cl_showspeed_offset" "0"
 seta "cl_showspeed_unit" "3"
-"cl_sidespeed" "400"
+"cl_sidespeed" "600"
 seta "cl_simpleitems" "2"
+"cl_upspeed" "600"
 seta "cl_voice" "0"
 seta "cl_warpzone_sound_transition" "1"
 seta "cl_weapon_wheel" "1"
