--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,6 +83,7 @@ bind -n S-Right next-window
 # Settings
 #
 
+set-option -g status-position bottom
 set-option -g default-shell /opt/homebrew/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
