--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,8 +7,10 @@ include ./nord.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Share Tech Mono
-# bold_font        auto
+# font_family      Share Tech Mono
+font_family      ShureTechMono Nerd Font Mono Regular
+bold_font        Share Tech Mono
+symbol_map U+0066 Share Tech Mono
 # italic_font      auto
 # bold_italic_font auto
 
@@ -1129,7 +1131,7 @@ background            #2e3440
 
 #: The foreground and background colors.
 
-background_opacity 0.925
+background_opacity 0.945
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
