--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1131,7 +1131,8 @@ background            #2e3440
 
 #: The foreground and background colors.
 
-background_opacity 0.945
+#background_opacity 0.945
+background_opacity 0.9
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
