--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ include ./nord.conf
 #: characters.
 
 # font_family      Share Tech Mono
-font_family      ShureTechMono Nerd Font Mono Regular
+font_family     ShureTechMono Nerd Font
 bold_font        Share Tech Mono
 symbol_map U+0066 Share Tech Mono
 # italic_font      auto
