--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,11 @@
 include ./nord.conf
+
+map cmd+equal change_font_size all +2.0
+map cmd+minus change_font_size all -2.0
+map cmd+0 change_font_size all 0
+map cmd+c copy_to_clipboard
+map cmd+v paste_from_clipboard
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
