--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #
 
 set -g @tpm_plugins 'arcticicestudio/nord-tmux' # an arctic, north-bluish theme
-
+set -g status-right ""
 #
 # Bindigs
 #
